--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,40 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Serif+4:opsz,wght@8..60,400..700&display=swap');
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
+/* @theme {
+  --font-sans: var(--font-plus-jakarta-sans), sans-serif;
+  --font-serif: var(--font-source-serif-4), serif;
+} */
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Source Serif 4', serif;
+  font-weight: 700;
+  font-optical-sizing: none;
+
+  position: relative;
+  isolation: isolate;
+}
+
+p {
+  font-family: var(--font-plus-jakarta-sans), sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+}
+
+h1, h2, h3, li {
+  font-weight: 700;
+}
+
+h1 {
+  font-size: 62px;
+}
+
+body::after {
+  content: '';
+  position: absolute;
+  background-image: linear-gradient(to bottom, rgba(255, 255, 255, 1), rgb(72, 154, 214, 0.6));
+  background-attachment: fixed;
+  opacity: 0.3;
+  inset: 0;
+  z-index: -1;
 }
