--- a/app/globals.css
+++ b/app/globals.css
@@ -10,23 +10,10 @@ body {
   font-family: 'Source Serif 4', serif;
   font-weight: 700;
   font-optical-sizing: none;
+  color: rgb(14, 35, 33);
 
   position: relative;
   isolation: isolate;
-}
-
-p {
-  font-family: var(--font-plus-jakarta-sans), sans-serif;
-  font-weight: 500;
-  font-size: 16px;
-}
-
-h1, h2, h3, li {
-  font-weight: 700;
-}
-
-h1 {
-  font-size: 62px;
 }
 
 body::after {
@@ -34,7 +21,39 @@ body::after {
   position: absolute;
   background-image: linear-gradient(to bottom, rgba(255, 255, 255, 1), rgb(72, 154, 214, 0.6));
   background-attachment: fixed;
-  opacity: 0.3;
+  opacity: 0.2;
   inset: 0;
   z-index: -1;
+}
+
+p {
+  font-family: var(--font-plus-jakarta-sans), sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  letter-spacing: 0.01em;
+  line-height: 1.5em;
+}
+
+h1,
+h2 {
+  letter-spacing: 0.01em;
+  line-height: 1.2em;
+}
+
+h3,
+li {
+  letter-spacing: 0.02em;
+  line-height: 1.2em;
+}
+
+h1 {
+  font-size: 62px;
+}
+
+.container {
+  max-width: 1535px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 20px;
+  height: 100%;
 }
