--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 body {
-  font-family: 'Source Serif 4', serif;
+  font-family: "Source Serif 4", serif;
   font-weight: 700;
   font-optical-sizing: none;
   color: rgb(14, 35, 33);
@@ -11,16 +11,26 @@ body {
 }
 
 body::after {
-  content: '';
+  content: "";
   position: absolute;
-  background-image: linear-gradient(to bottom, rgba(255, 255, 255, 1), rgb(72, 154, 214, 0.6));
+  background-image: linear-gradient(
+    to bottom,
+    rgba(255, 255, 255, 1),
+    rgb(72, 154, 214, 0.6)
+  );
   background-attachment: fixed;
   opacity: 0.2;
   inset: 0;
   z-index: -1;
 }
 
-p, label, input, textarea, .send-message, li, h3 {
+p,
+label,
+input,
+textarea,
+.send-message,
+li,
+h3 {
   font-family: var(--font-plus-jakarta-sans), sans-serif;
   font-weight: 400;
   font-size: 1em;
@@ -28,7 +38,9 @@ p, label, input, textarea, .send-message, li, h3 {
   line-height: 1.5em;
 }
 
-h3, button, li {
+h3,
+button,
+li {
   font-weight: bold;
 }
 
@@ -62,7 +74,8 @@ h2 {
   font-size: 2em;
 }
 
-h1, h2 {
+h1,
+h2 {
   white-space: normal;
   word-break: break-word;
 }
@@ -74,7 +87,7 @@ h1, h2 {
 }
 
 .selected {
-  background-color: #469BD1;
+  background-color: #469bd1;
   color: #ffffff;
   font-weight: bold;
 }
